--- a/index.html
+++ b/index.html
@@ -1,24 +1,51 @@
 <!DOCTYPE html>
-<html data-ng-app>
+<html data-ng-app="demoApp">
 <head lang="en">
     <meta charset="UTF-8">
     <title>Angular first time</title>
 </head>
 <body>
-Name:
-<br />
-<input type="text" data-ng-model="name" /> {{ name }}
+    <div data-ng-controller="SimpleController">
+        Name:
+        <br />
+        <input type="text" data-ng-model="name" /> {{ name }}
+        <br/><br/>
 
-<br/><br/>
-<div class="container"
-     data-ng-init="people=[{name:'Idan'  , city:'Tel Aviv'},
-                               {name:'Or'    , city:'Haifa'},
-                               {name:'Nitzan', city:'Or Yehuda'},
-                               {name:'Grisha', city:'Holon'}]">
-    <ul>
-        <li data-ng-repeat="person in people | filter:name | orderBy:'city'">{{ person.name }} - {{ person.city }}</li>
-    </ul>
-</div>
-<script src="js/angular.js"></script>
+        <ul>
+            <li data-ng-repeat="person in people | filter:name | orderBy:'city'">{{ person.name }} - {{ person.city }}</li>
+        </ul>
+    </div>
+
+    <script src="js/angular.js"></script>
+    <script>
+        var demoApp = angular.module('demoApp', []);
+
+        demoApp.config(function ($routeProvider) {
+            $routeProvider
+                    .when ('/',
+                        {
+                            controller: 'SimpleController',
+                            templateUrl: 'Partials/View1.html'
+                        })
+                    .when ('/partial1',
+                        {
+                            controller: 'SimpleController',
+                            templateUrl: 'Partials/View2.html'
+                        })
+                    .otherwise ({ redirectTo: '/' });
+        });
+
+        var controllers = {};
+        controllers.SimpleController = function ($scope) {
+            $scope.people = [
+                { name: 'Idan', city: 'Tel Aviv' },
+                { name: 'Or', city: 'Haifa' },
+                { name: 'Nitzan', city: 'Or Yehuda' },
+                { name: 'Grisha', city: 'Holon' }
+            ];
+        };
+
+        demoApp.controller(controllers);
+    </script>
 </body>
 </html>
